[package]
name = "weighted-select"
version = "0.1.1"
description = "futures::stream::Select with weights"
keywords = ["Select", "stream", "priority", "weight"]
authors = ["Paul Loyd <pavelko95@gmail.com>"]
repository = "https://github.com/loyd/weighted-select"
documentation = "https://docs.rs/weighted-select/"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
futures = "0.1.26"

[dev-dependencies]
quickcheck = "0.8.2"
quickcheck_macros = "0.8.0"
